# cloudprice-mcp

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  refresh-prices.yml  release.yml
docs/: v0.6.0_finops_decision_suite_and_live_pricing.md  v0.6_migration_assessment_spec.md
examples/: claude_desktop_config.json  cloudprice-watch.yml  workload.json
scripts/: refresh_prices.py
scripts/fetchers/: __init__.py  aws.py  azure.py  base.py  gcp.py  oci.py
src/cloudprice_mcp/: caveats.py  cli.py  clients.py  compare.py  doctor_cmd.py  export.py  fix_path_cmd.py  history.py  history_cmd.py  inventory.py  path_fix.py  pricing.py  server.py  setup_cmd.py
src/cloudprice_mcp/data/: carbon_factors.json  caveats.json  egress_prices.json  object_storage_prices.json  postgres_prices.json  prices.json  ri_tiers.json
src/cloudprice_mcp/data/prices/: 2026-05-12.json  2026-05-13.json  2026-05-17.json  __init__.py
src/cloudprice_mcp/finops/: __init__.py  carbon.py  commitment.py  egress_arbitrage.py  gpu.py  migration.py  sentinel.py  spot.py  tco.py
tests/: test_compare.py  test_pricing.py  test_v0_10_carbon.py  test_v0_11_gpu.py  test_v0_3_object_storage.py  test_v0_3_oci_and_postgres.py  test_v0_4_setup_doctor.py  test_v0_5_1_clients.py  test_v0_5_1_setup.py  test_v0_5_2_path_fix.py  test_v0_5_egress.py  test_v0_5_multi_az_and_snapshots.py  test_v0_6_caveats.py  test_v0_6_commitment.py  test_v0_6_egress_arbitrage.py  test_v0_6_export.py  test_v0_6_inventory.py  test_v0_6_migration.py  test_v0_6_tco.py  test_v0_7_1_history.py  test_v0_7_fetchers.py  test_v0_8_1_spot.py  test_v0_8_gcp_fetcher.py  test_v0_9_sentinel.py
