[project]
name = "cloudprice-mcp"
version = "0.5.0"
description = "MCP server that compares cloud pricing across AWS, Azure, GCP, and OCI. 10 tools covering compute, block storage, object storage, managed Postgres, egress (with OCI 10TB-free shown), Multi-AZ workloads, and Reserved Instance / Savings Plan discounts. Ships with cloudprice-mcp setup auto-config CLI and doctor diagnostic command. OCI Always Free tier surfaced explicitly."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Albaker", email = "baker.ali.m@gmail.com" }]
keywords = ["mcp", "cloud", "pricing", "aws", "azure", "gcp", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
cloudprice-mcp = "cloudprice_mcp.cli:main"

[project.urls]
Homepage = "https://albaker.info"
Repository = "https://github.com/alialbaker/cloudprice-mcp"
Issues = "https://github.com/alialbaker/cloudprice-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudprice_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
