[project]
name = "cloudprice-mcp"
version = "0.7.0"
description = "The FinOps MCP server: structured cloud pricing + analysis primitives for AI assistants. RI break-even, multi-cloud TCO, exit-cost migration, egress arbitrage across AWS / Azure / GCP / OCI. 10 tools, 7 AI clients (Claude, Copilot, Cursor, Windsurf, Cline, Continue, Zed)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Albaker", email = "baker.ali.m@gmail.com" }]
keywords = ["finops", "mcp", "cloud", "pricing", "cost", "tco", "aws", "azure", "gcp", "oci", "reserved-instances", "savings-plan", "claude", "copilot", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
cloudprice-mcp = "cloudprice_mcp.cli:main"

[project.urls]
Homepage = "https://albaker.info"
Repository = "https://github.com/Albaker-Group/cloudprice-mcp"
Issues = "https://github.com/Albaker-Group/cloudprice-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudprice_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
